added location to job

--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -6,6 +6,7 @@
     <th>Startdate</th>
     <th>Enddate</th>
     <th>Specialization</th>
+    <th>Location</th>
     <th>Comment</th>
     <th></th>
     <th></th>
@@ -18,6 +19,7 @@
     <td><%= job.startdate %></td>
     <td><%= job.enddate %></td>
     <td><%= job.specialization %></td>
+    <td><%= job.location %></td>
     <td><%= job.comment %></td>
     <td><%= link_to 'Show', job %></td>
     <td><%= link_to 'Edit', edit_job_path(job) %></td>
