--- a/app/views/jobs/_form.html.erb
+++ b/app/views/jobs/_form.html.erb
@@ -28,6 +28,10 @@
     <%= f.text_field :specialization %>
   </div>
   <div class="field">
+    <%= f.label :location %><br />
+    <%= f.text_field :location %>
+  </div>
+  <div class="field">
     <%= f.label :comment %><br />
     <%= f.text_area :comment %>
   </div>
