renamed comment => description in jobs

--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -7,7 +7,7 @@
     <th>Enddate</th>
     <th>Specialization</th>
     <th>Location</th>
-    <th>Comment</th>
+    <th>Description</th>
     <th></th>
     <th></th>
     <th></th>
@@ -20,7 +20,7 @@
     <td><%= job.enddate %></td>
     <td><%= job.specialization %></td>
     <td><%= job.location %></td>
-    <td><%= job.comment %></td>
+    <td><%= job.description %></td>
     <td><%= link_to 'Show', job %></td>
     <td><%= link_to 'Edit', edit_job_path(job) %></td>
     <td><%= link_to 'Destroy', job, method: :delete, data: { confirm: 'Are you sure?' } %></td>
