--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -24,5 +24,6 @@
     <%= f.password_field :password_confirmation %>
   </div>
   <div class="actions"><%= f.submit %></div>
+<p><%= link_to "Log in", :controller => "sessions", :action => "new" %></p>
 <% end %>
 
