restricting updating and destroying of jobs to own jobs only

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-<p>Logged in as: <%= current_user.email %></p>
+<p>Logged in as: <%= current_user.email %> (ID: <%= current_user.id %>)</p>
 
 <%= yield %>
 
