--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,15 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+
+<% if current_user %>
 <p>Logged in as: <%= current_user.email %> (ID: <%= current_user.id %>)</p>
+<% else %>
+
+<p><%= link_to "Sign in", :controller => "sessions", :action => "new" %></p>
+
+<% end%>
+
 
 <%= yield %>
 
